# WSIS

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CITY_PROFILES_SCHEMA.md  DATA_NORMALIZATION.md  DATA_PLAN.md  DATA_SOURCE_MAPPINGS.md  DATA_STANDARDS.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  RELEASE_CHECKLIST.md  SCORING_MODEL.md  UX_SPEC.md  pyproject.toml  repo_structure.txt
.codex/environments/: environment.toml
apps/api/: __init__.py  main.py
apps/streamlit/: Home.py
data/mock/: cities.csv
data/normalized/: city_dataset.csv
data/processed/: city_profiles.parquet  city_profiles_validation_report.json
data/source_samples/: city_index.csv  climate.csv  cost_of_living.csv  jobs.csv  newgrad_jobs.csv  safety.csv  social_sentiment.csv
docs/design/: imagegen_prompt_configs.yaml  iphone12_layout_config.yaml  responsive_best_practices.md
docs/engineering/: data_engineer_prompt.md  frontend_engineer_prompt.md
docs/product/: MVP_REBUILD_SPEC.md  david_api_and_data_plan.md  user0_david_story.md
docs/project_management/: COST_REGISTER.md  EXECUTION_PLAN.md  PM_OPERATING_PLAN.md  RESPONSIVE_QA_CHECKLIST.md  RISK_REGISTER.md  ROADMAP.md
scripts/: browser_smoke.mjs  rebuild_city_profiles.py  wsis_readiness_check.py
src/wsis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_city_profiles_validation.py  test_city_service.py  test_decision_api.py  test_decision_copy.py  test_decision_engine.py  test_homepage_helpers.py  test_normalization_pipeline.py  test_repository.py  test_scoring_engine.py
(+64 files in other folders)
